sub/NNO-11576 Использовать Stream.toList() вместо collect(Collectors.toList())